咕咕嘎嘎，没有mixin配置，没办法，我不会